# pjatk-timetable-scraper

./: .env_example  .gitignore  Cargo.toml  README.md
src/: event.rs  main.rs  parser.rs  scraper.rs
