[package]
name = "pjatk-timetable-scraper"
description = "PJATK lecture timetable scraper"
authors = ["Wojciech Jarząbek <wojciechjarzabek@windowslive.com>"]
repository = "https://github.com/vtu-dog/pjatk-timetable-scraper"
version = "1.0.0"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
debug = true
lto = true
rpath = false
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = true

[dependencies]
anyhow = "1.0.45"
bytes = "1.1.0"
chrono = "0.4.19"
clap = { version = "2.33.3", features = ["wrap_help"] }
ical = "0.7.0"
load-dotenv = "0.1.2"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.6", features = ["blocking", "cookies", "multipart"] }
scraper = "0.12.0"